# MiniCode-Harness

./: .env.example  .gitignore  AI_NOTES.md  HIGHLIGHTS.md  MANUAL_TESTING.md  README.md  RECORDING.md  TESTING.md  install.ps1  pyproject.toml
docs/superpowers/plans/: 2026-06-15-runtime-safety.md  2026-06-15-session-selector.md
docs/superpowers/specs/: 2026-06-15-runtime-safety-design.md  2026-06-15-session-selector-design.md
minicode/: __init__.py  cli.py  config.py  service.py  terminal_ui.py
minicode/llm/: base.py  fake.py  openai_compatible.py
minicode/permissions/: guard.py  policy.py
minicode/persistence/: database.py  models.py  repositories.py
minicode/runtime/: agent_loop.py  compactor.py  context_builder.py  models.py
minicode/tools/: base.py  coding.py  dispatcher.py  executors.py  registry.py
prompts/: compact.md  system.md
tests/integration/: test_runtime.py  test_runtime_failures.py
tests/unit/: test_approval_ui.py  test_cli.py  test_compactor.py  test_config.py  test_context.py  test_executors.py  test_policy.py  test_streaming_llm.py  test_terminal_ui.py  test_tools.py
workspace/: AGENT.md
workspace/demo_project/: README.md  calculator.py  test_calculator.py
